Fix clear filters img and text not centered.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -656,6 +656,12 @@ footer a {
     padding: 0 3em;
 }
 
+.flex-row-items-center {
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 .flex-row-evenly .modal-column.horizontal-separator:not(:first-child) {
     border-left: 1px solid #767676;
 }
